--- a/2.1 Network Application.md
+++ b/2.1 Network Application.md
@@ -72,7 +72,7 @@
 * 보내는 프로세스에서는 door에 메세지를 집어넣음
 * 따라서, 보내는 프로세스는 하부의 전송구조를 이용해 다른 쪽에 보내게 됨
 
-* 그림 참조 11
+	![11](Images/11.PNG)
 
 *Addressing processes*
 * 무언가를 주고 받기 위해선 주소가 필요함 
@@ -109,7 +109,7 @@
 
 * 이해만 할 것 
 
-* 그림 참조 12 
+![12](Images/12.PNG)
 
 *Internet Transport protocols services*
 * TCP service 
@@ -126,7 +126,7 @@
 
 *Internet Apps*
 
-* 그림 참조 13 
+![13](Images/13.PNG)
 
 
 
