Update 2.2 Web and HTTP.md
Change Style

--- a/2.2 Web and HTTP.md
+++ b/2.2 Web and HTTP.md
@@ -1,4 +1,4 @@
-﻿2.2 Web and HTTP
+﻿# 2.2 Web and HTTP
 
 * 웹 페이지는 안에 여러 개의 오브젝트를 가지고 있음 
 * 오브젝트는 HTML 문서, JPEG 이미지, 자바 애플릿, 오디오 파일 등 다양한 것이 될 수 있음 
@@ -8,7 +8,7 @@
 
 * 사진 참조 1 
 
-HTTP overview
+*HTTP overview*
 
 * HTTP : 웹을 동작시키는 Protocol (hypertext transfer protocol)
 * client/server model
@@ -26,7 +26,7 @@ HTTP overview
 	* 굉장히 견고하고 안정적임 
 	* 하지만, state를 기억하는 방식도 있음 - EX) 쿠키 
 
-HTTP Connections
+*HTTP Connections*
 
 * Persistent (지속적임)
 	* 웹사이트를 떠나기 전까지는 connection을 만들어 놓음 
@@ -36,30 +36,29 @@ HTTP Connections
 	* 비효율적 ( 메세지를 보낼 떄 마다 새로 만듬 )
 	* 하지만, 대부분 하나의 오브젝트는 TCP 연결을 통해 메세지를 보냄
 
-Nonpersistent HTTP 
+*Nonpersistent HTTP* <br>
+1 - a. 클라이언트가 서버에게 연결 설정을 요청 <br>
+1 - b. 서버가 연결해도 좋다고 대답 함 <br>
+2. 클라이언트가 원하는 메세지 (Object 목록)를 전달 <br>  
+3. 결과를 전달 <br>
+4. 서버가 TCP 연결을 닫음 <br>
+5. 클라이언트는 그 결과물을 표현 <br> 
+6. 만약, 그런 Object가 10개 더 있다면 1 ~ 5 까지의 과정을 계속 반복 <br>
 
-1 - a. 클라이언트가 서버에게 연결 설정을 요청 
-1 - b. 서버가 연결해도 좋다고 대답 함
-2. 클라이언트가 원하는 메세지 (Object 목록)를 전달 
-3. 결과를 전달
-4. 서버가 TCP 연결을 닫음 
-5. 클라이언트는 그 결과물을 표현 
-6. 만약, 그런 Object가 10개 더 있다면 1 ~ 5 까지의 과정을 계속 반복
-
-NonPersistent HTTP : Response time 
+*NonPersistent HTTP : Response time* 
 
 - 사진 참고 NP 2
 
 * 두꺼운 부분 - 데이터량이 많은 경우가 존재 
 * Total = 2 Round Trip Time + transmit Time (전체 Data 량)
 
-Persistent HTTP 
+*Persistent HTTP* 
 
 * 한 번 RTT를 연결 설정하기 위하여 RTT 수행 
 * 그 후부터는, Object가 여러개라도 transmit Time명령만 반복 수행 
 * 따라서, NonPersistent에 비해 시간 절약이 가능 
 
-HTTP request message
+*HTTP request message*
 
 * HTTP messages의 두 가지 종류 : request, response 
 
@@ -76,33 +75,33 @@ HTTP request message
 
 * Entity Body => Get의 경우 빈 칸 
 
-Uploading form input 
+*Uploading form input* 
 
-* Post 메소드 ( Get말고도 사용할 수 있는 메소드)
+* Post 메소드 (Get말고도 사용할 수 있는 메소드)
 	* 사용 시 Input Data가 웹 서버에 등록 됨
 	* 서버에서 값을 요청하는 경우 사용하는 메소드 
 
-Method Type 
+*Method Type*
 
-HTTP/1.0
+1. HTTP/1.0
 
 * GET
 * POST - 하나의 field를 채움
 * HEAD - GET과 유사, HEADER 정보만 전달 
 
-HTTP/1.1
+2. HTTP/1.1
 
 * GET, POST, HEAD
 * PUT - 파일 전체를 올릴 수 있음 
 * DELETE - 필요하면 웹 서버의 파일을 지울 수 있음   
 
-HTTP response message 
+*HTTP response message* 
 
 * 사진 참조 5 
 
 * status line - Operation을 실행하고 그 결과에 대해서 설명 
 
-HTTP response status code 
+*HTTP response status code* 
 
 * 사진 참조 6
 
