--- a/2.2 Web and HTTP.md
+++ b/2.2 Web and HTTP.md
@@ -6,7 +6,7 @@
 * 각각의 오브젝트 들은 어디에 있는지를 표시하기 위해 URL로 addressable되고 있음  
 * URL = Unified Resource Locator 
 
-* 사진 참조 1 
+![1](Images/1.PNG)
 
 *HTTP overview*
 
@@ -47,7 +47,7 @@
 
 *NonPersistent HTTP : Response time* 
 
-- 사진 참고 NP 2
+![2](Images/2.PNG)
 
 * 두꺼운 부분 - 데이터량이 많은 경우가 존재 
 * Total = 2 Round Trip Time + transmit Time (전체 Data 량)
@@ -62,7 +62,7 @@
 
 * HTTP messages의 두 가지 종류 : request, response 
 
-* 사진 참조 3
+![3](Images/3.PNG)
 
 * HTTP/1.1 => Protocol Version 
 * User-Agent => GET하는 브라우저의 소프트웨어 (explore ...)
@@ -71,7 +71,7 @@
 
 * (extra carriage return, line feed) => response의 경우 내용물이 여기에 담겨서 들어옴 
 
-* 사진 참조 4
+![4](Images/4.PNG)
 
 * Entity Body => Get의 경우 빈 칸 
 
@@ -97,13 +97,13 @@
 
 *HTTP response message* 
 
-* 사진 참조 5 
+![5](Images/5.PNG)
 
 * status line - Operation을 실행하고 그 결과에 대해서 설명 
 
 *HTTP response status code* 
 
-* 사진 참조 6
+![6](Images/6.PNG)
 
 * 301 - 자리에 존재 하지 않음
 
