Update 2.2-2 Cookies and Proxies.md
Change Style

--- a/2.2-2 Cookies and Proxies.md
+++ b/2.2-2 Cookies and Proxies.md
@@ -27,7 +27,7 @@
 
 * 하지만, 개인 정보 보호에 대한 문제가 생길 수도 있음 
 
-*Web caches (proxy server)
+*Web caches (proxy server)*
 
 * 사진 참조2
 
@@ -75,7 +75,7 @@
 * 사진 참조6
 
 * If-modified-since
-	* 만약 date이후에 데이터가 수정되었으면의 의미
+	* '만약 date이후에 데이터가 수정되었으면' 의 의미
 		*  고쳐졌으면 고쳐진 데이터를 줌, 고쳐지지 않았다면 고쳐지지 않았다고 답을 함
 * Cache에서 이 역할을 수행 
 * 고쳐지지 않은 경우는 Data 처리에 시간이 걸리지 않지만(바뀌지 않았다는 메시지 이외) , 고쳐진 경우는 Data 처리에 시간이 걸림 
