Update 2.2-2 Cookies and Proxies.md
Update Images Link

--- a/2.2-2 Cookies and Proxies.md
+++ b/2.2-2 Cookies and Proxies.md
@@ -11,7 +11,7 @@
 
 *Cookies: keeping "state"*
 
-* 사진 참조1
+![A](Images/A.PNG)
 
 * 사진 옆의 숫자는 cookie 번호 (8734, 1678 ..)
 * 만약, amazon이라는 서버에 HTTP request를 하면 쿠키를 지원하는 곳에서 1678이라는 ID를 만들고 Database에 저장 
@@ -29,7 +29,7 @@
 
 *Web caches (proxy server)*
 
-* 사진 참조2
+![B](Images/B.PNG)
 
 * 클라이언트가 어떤 오브젝트에 접근 하기 위해 프록시 서버로 이동
 * 이 프록시 서버에서 바로 결과를 보내줌 
@@ -44,7 +44,7 @@
 
 *Caching Example*
 
-* 사진 참조3
+![C](Images/C.PNG)
 
 * Institutional cache (기관의 캐시)
 * 내부에서 바깥을 보내는 Lan (외부망과 연결) = 10 Mbps Lan 
@@ -53,7 +53,7 @@
 * 위의 예시에서 라우터 내부에서 외부까지 갔다 오는데 걸린 시간 = 2초
 * 이용률이 100% 이기 때문에 분 단위로 시간이 걸린다고 예상 
 
-* 사진 참조4
+![D](Images/D.PNG)
 
 * 해결책으론 access link를 10Mbps로 올린다면 15%의 이용률을 가짐
 * 이용률이 100%가 된 다는 것은 네트워크 연결이 끊어지는 것을 의미 
@@ -61,7 +61,7 @@
 * 이 경우는 15%의 이용률을 가지게 되므로 시간을 분 단위에서 밀리로 바꿀 수 있음 
 * 대신, 10 Mbps로 올리기 위해 비용(돈)이 소모
 
-* 사진 참조5
+![E](Images/E.PNG)
 
 * 1.5Mbps로 놔두되 내부망에 Cache를 놓음 
 * 우리가 원하는 데이터가 있을 확률을 40%로 가정 (suppose hit rate)
@@ -72,7 +72,7 @@
 
 *Conditional Get*
 
-* 사진 참조6
+![F](Images/F.PNG)
 
 * If-modified-since
 	* '만약 date이후에 데이터가 수정되었으면' 의 의미
