--- a/2.3 FTP.md
+++ b/2.3 FTP.md
@@ -1,6 +1,4 @@
-﻿2.3 FTP (파일 전송 프로토콜)
-
-# FTP - the file transfer protocol
+# 2.3 FTP - the file transfer protocol
 
 * 사진 참조1
 
@@ -37,7 +35,7 @@
 	* 명령 채널을 통해 아스키 코드로 전달 됨 
 	* USER - username  
 	* PASS - password
-	* LIST - (현재 디렉토리에 있는 파일 목록들을 보여줌) 
+	* LIST - 현재 디렉토리에 있는 파일 목록들을 보여줌 
 	* RETR - 파일을 가져옴 (Gets file)
 	* STOR - 파일을 저장할 때 사용하는 명령어 
 
