--- a/2.3 FTP.md
+++ b/2.3 FTP.md
@@ -1,6 +1,6 @@
 # 2.3 FTP - the file transfer protocol
 
-* 사진 참조1
+![231](Images/231.PNG)
 
 * 파일을 원격지에 있는 호스트에 보내고 또한, 거기서 그것을 가져올 수 있음
 * 이러한 작업을 하는데 사용되는 프로토콜이 FTP 
@@ -14,7 +14,7 @@
 
 *FTP : separate control, data connections*
 
-* 사진 참조2
+![232](Images/232.PNG)
 
 * FTP는 연결을 두 개 가지고 있음 (separate control, data connection)
 * 진행 과정
@@ -41,9 +41,9 @@
 
 * Sample return code
 
-* 사진 참조3
+![233](Images/233.PNG)
 
-	* HTTP와 유사하게 대개 Number를 사용 
+* HTTP와 유사하게 대개 Number를 사용 
 
 
 
