--- a/2.4 email.md
+++ b/2.4 email.md
@@ -70,7 +70,7 @@
 
 * HTTP는 하나씩 따로따로 만나야 함 
 * SMTP는 메세지를 multiple로 보낼 수 있음
-	* text, 그림, 동영상 multipart msg로서 보낼 수 있음 
+	* text, 그림, 동영상 등을 multipart msg로서 보낼 수 있음 
 
 *Mail message format*
 
@@ -92,7 +92,7 @@
 	* Access Protocol로는 3가지가 있음
 	* POP : post office protocol (RFC 1939)
 	* IMAP : Internet Mail access protocol (RFC 1730)
-		* 더 복잡하지만 기능도 또한 더 많음
+		* POP에 비해 더 복잡하지만 기능도 또한 더 많음
 		* 서버 안에 저장되어 있는 메세지를 조작할수 있음 (POP은 불가)
 	* HTTP : Web mail (gmail, yahoo etc)
 
