--- a/2.4 email.md
+++ b/2.4 email.md
@@ -2,7 +2,7 @@
 
 *Electronic Mail*
 
-* 사진 참조1
+![241](Images/241.PNG)
 
 * 세 가지의 주요 컴포넌트로 구성이 되어 있음
 	* user agents 
@@ -50,7 +50,7 @@
 
 *Scenario: Alice sends message to Bob*
 
-* 사진 참조2
+![242](Images/242.PNG)
 
 1. 앨리스는 메세지를 작성하기 위해 UA를 사용하며 목적지(주소)를 설정한다. 
 2. 앨리스의 UA는 그녀의 메일 서버로 메시지를 보내며, 메세지 큐에 메세지가 쌓임(대기)
@@ -66,7 +66,8 @@
 * SMTP는 메세지 내용들을 7-bit 아스키를 사용해서 인코딩함 
 * SMTP 서버는 메세지의 끝을 결정하기 위해 '\n'.'\n' 방식을 사용 
 * HTTP와 비교
-* 사진 참고3
+
+![243](Images/243.PNG)
 
 * HTTP는 하나씩 따로따로 만나야 함 
 * SMTP는 메세지를 multiple로 보낼 수 있음
@@ -74,19 +75,21 @@
 
 *Mail message format*
 
-* 사진 참고4
+![244](Images/244.PNG)
 
 * SMTP - email msg들을 어떻게 주고 받을 것인지 결정하는 protocol
 * Header와 body format을 정의하고 있는 것은 RFC 822 문서 
 
 *Message format : multimedia extension*
 
-* 사진 참고5
+![245](Images/245.PNG)
+
 * MIME이 나오면서 부터 동영상이나 이미지 같은 파일을 붙일 수 있게 됨
 
 *Mail access protocols*
 
-* 사진 참고6
+![246](Images/246.PNG)
+
 * SMTP는 Mail Server까지 전달 및 Mail Box까지 넣어주는 역할을 수행 
 * Mail server나 Mail Box에 있는 것을 가져오는 역할을 수행하는 것이 access protocol 
 	* Access Protocol로는 3가지가 있음
@@ -98,7 +101,7 @@
 
 *POP3 protocol*
 
-* 사진 참고7
+![247](Images/247.PNG)
 
 * list : mailbox에 있는 message(mail)들의 목록을 list
 * retr : 메세지 Number의 내용을 가져옴
