--- a/2.5 DNS.MD
+++ b/2.5 DNS.MD
@@ -39,7 +39,7 @@
 
 *Distributed, Hierarchical Databases*
 
-* 그림 참조1
+![251](Images/251.PNG)
 	* 따라서, DNS는 계층 구조화 , 분산 되어 있음 
 	* 만약, 클라이언트가 amazon.com IP를 원한다면
 		1. 클라이언트는 루트 서버에게 com을 다루는 DNS server가 어디 있는지 물어봄
@@ -64,17 +64,17 @@
 	* 기관이나 서비스 제공자에 의해 유지되어 질 수 있음
 
 *Local Name Server*
-	* 계층 구조에만 전적으로 속하지 않음
-	* ISP는 각각 도메인 서버를 가지고 있음
-		* 보통, default name server라고 부름 
-	* host가 DNS query를 만들 때, query는 local DNS server로 쿼리를 보냄
-		* proxy로서 작용(자기가 값이 없으면 그 일을 root server에게 대신해서 물어봐주는 역할을 수행)
+* 계층 구조에만 전적으로 속하지 않음
+* ISP는 각각 도메인 서버를 가지고 있음
+	* 보통, default name server라고 부름 
+* host가 DNS query를 만들 때, query는 local DNS server로 쿼리를 보냄
+	* proxy로서 작용(자기가 값이 없으면 그 일을 root server에게 대신해서 물어봐주는 역할을 수행)
 		 
 *DNS name resolution example*
-* 사진 참조2
+![252](Images/252.PNG)
 	* proxy로 작용한 예 
 
-* 사진 참조3
+![253](Images/253.PNG)
 	* recursive로 동작하는 예 
 
 *DNS: caching and updating records*
@@ -89,14 +89,14 @@
 * DNS : 분산된 DB는 RR로서 저장된다
 * Resource Records Format(RR format) : (name, value, type, ttl) 
 * ttl = time to read 
-* 사진 참조4
+![254](Images/254.PNG)
 
 *DNS protocol, messages*
-* 사진 참조5
+![255](Images/255.PNG)
 * # = number
 
 * Inserting records into DNS
-* 사진 참조6 
+![256](Images/256.PNG)
 * 도메인 서버를 통해서 IP address를 얻음 
 
 
