--- a/2.5 DNS.MD
+++ b/2.5 DNS.MD
@@ -72,10 +72,10 @@
 		 
 *DNS name resolution example*
 ![252](Images/252.PNG)
-	* proxy로 작용한 예 
+* proxy로 작용한 예 
 
 ![253](Images/253.PNG)
-	* recursive로 동작하는 예 
+* recursive로 동작하는 예 
 
 *DNS: caching and updating records*
 * 하나의 어떤 서버 이름을 mapping으로 알게 되면, mapping 자체를 저장
@@ -93,7 +93,7 @@
 
 *DNS protocol, messages*
 ![255](Images/255.PNG)
-* # = number
+* '#' = number
 
 * Inserting records into DNS
 ![256](Images/256.PNG)
